--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,11 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  flutter_phone_direct_caller: ^2.1.1
+  flutter_polyline_points: ^1.0.0
+  dio: ^4.0.6
+  google_maps_flutter: ^2.2.1
+  url_launcher: ^6.1.6
   flutter:
     sdk: flutter
 
@@ -46,7 +51,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-      - assets/products.json
+    - assets/funeralplace.json
+    - assets/images/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
